# advent-of-code-23

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
lib/day1/: README.md  main.py  utils.py
lib/day2/: README.md  main.py
lib/day3/: README.md  main.py  utils.py
lib/day4/: README.md  main.py
lib/day5/: README.md  main.py  utils.py
src/cal/day1/: README.md  main.py  utils.py
src/cal/day2/: README.md  main.py  utils.py
src/cal/day3/: README.md  main.py  utils.py
src/cal/day4/: README.md  main.py  utils.py
src/cal/day5/: README.md  main.py  utils.py
src/cal/day7/: README.md  main.py  utils.py
src/cal/day8/: README.md  main.py  utils.py
src/cal/logger/: README.md  logger_config.py
tests/day1/: test_run.py
tests/day2/: test_utils.py
tests/day3/: test_utils.py
tests/day4/: test_utils.py
tests/day5/: test_utils.py
tests/day7/: test_utils.py
tests/day8/: test_utils.py
