[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["James Dockeray <2040040+jdockeray@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "cal", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
